# sudo-therapist

./: .gitignore  CMakeLists.txt  LICENSE  README.md
packaging/debian/: changelog  control  copyright  postinst  prerm  rules
packaging/etc/: sudo-therapist.conf
packaging/pam-configs/: sudo-therapist
scripts/: make_deb.sh  uninstall_cmake.sh
src/: pam_sudo_therapist.c  st_color.c  st_color.h  st_config.c  st_config.h  st_gate.c  st_gate.h  st_messages.c  st_messages.h  st_util.c  st_util.h
